fixed z-index

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ nav {
     width: 100%;
     transition: 0.5s;
     background: inherit;
-    z-index: 1;
+    z-index: 7;
 }
 
 nav.top {
